# django-edutech-platform

./: README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  seed_db.py
backend/: asgi.py  settings.py  urls.py  wsgi.py
courses/: admin.py  apps.py  fields.py  models.py  tests.py  urls.py  views.py
courses/api/: serializers.py
courses/fixtures/: subjects.json
courses/migrations/: 0001_initial.py  0002_content.py  0003_alter_content_content_type_video_text_image_file.py  0004_alter_content_options_alter_module_options_and_more.py  0005_course_student.py  0006_alter_content_options_alter_course_options_and_more.py  0007_auto_20250403_0857.py
courses/templates/: base.html
courses/templates/courses/course/: detail.html  list.html
courses/templates/courses/manage/course/: form.html  list.html
courses/templates/courses/manage/module/: content_list.html  formset.html
courses/templates/courses/subject/: subject_module_list.html
courses/templates/registration/: logged_out.html  login.html
educa/: settings.py
static/CACHE/css/: output.cd15db60047d.css
static/src/: input.css  output.css
students/: forms.py  models.py  tests.py  urls.py  views.py
students/migrations/: 0001_initial.py
students/templates/students/course/: detail.html  list.html
students/templates/students/student/: registration.html
