[tool.poetry]
name = "django-edutech-platform"
version = "0.1.0"
description = "Edutech platform written in Django"
authors = ["Muhammad Iqbal <iqbal.adudu@gmail.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.12.9"
asgiref = "^3.8.1"
certifi = "^2025.1.31"
charset-normalizer = "^3.4.1"
django = "^5.2.0"
django-braces = "^1.17.0"
django-embed-video = "^1.4.10"
djangorestframework = "^3.16.0"
idna = "^3.10"
python-memcached = "^1.62"
pytz = "^2025.2"
requests = "^2.32.3"
six = "^1.17.0"
sqlparse = "^0.5.3"
urllib3 = "^2.3.0"
faker = "^37.1.0"
pillow = "^11.1.0"
django-compressor = "^4.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
